Updated endpoint typo
