# openapi.json
@@ -1,1 +1,384 @@
-{"openapi":"3.0.0","info":{"title":"lbhub-api","version":"0.0.1","description":"","contact":{"name":"Justin Chung","email":"20733699+justin13888@users.noreply.github.com"}},"paths":{"/ping":{"get":{"x-controller-name":"PingController","x-operation-name":"ping","tags":["PingController"],"responses":{"200":{"description":"Ping Response","content":{"application/json":{"schema":{"$ref":"#/components/schemas/PingResponse"}}}}},"operationId":"PingController.ping"}},"/user/search":{"get":{"x-controller-name":"UserController","x-operation-name":"search","tags":["UserController"],"responses":{"200":{"description":"Array of User","content":{"application/json":{"schema":{"type":"array","items":{"$ref":"#/components/schemas/UserWithRelations"}}}}}},"parameters":[{"name":"filter","in":"query","content":{"application/json":{"schema":{"$ref":"#/components/schemas/User.Filter"}}}}],"operationId":"UserController.search"}},"/user/{userId}":{"get":{"x-controller-name":"UserController","x-operation-name":"findById","tags":["UserController"],"responses":{"200":{"description":"User","content":{"application/json":{"schema":{"$ref":"#/components/schemas/User"}}}}},"parameters":[{"name":"userId","in":"path","schema":{"type":"string"},"required":true}],"operationId":"UserController.findById"},"delete":{"x-controller-name":"UserController","x-operation-name":"delete","tags":["UserController"],"responses":{"200":{"description":"Successfully deleted","content":{"application/json":{"schema":{"type":"boolean"}}}}},"parameters":[{"name":"userId","in":"path","schema":{"type":"string"},"required":true}],"operationId":"UserController.delete"}},"/user":{"post":{"x-controller-name":"UserController","x-operation-name":"create","tags":["UserController"],"responses":{"200":{"description":"User","content":{"application/json":{"schema":{"$ref":"#/components/schemas/User"}}}}},"requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/User"}}}},"operationId":"UserController.create"}},"/users/{userId}":{"put":{"x-controller-name":"UserController","x-operation-name":"set","tags":["UserController"],"responses":{"200":{"description":"User","content":{"application/json":{"schema":{"$ref":"#/components/schemas/User"}}}}},"parameters":[{"name":"userId","in":"path","schema":{"type":"string"},"required":true}],"requestBody":{"description":"update user","content":{"application/json":{"schema":{"$ref":"#/components/schemas/User"}}},"x-parameter-index":1},"operationId":"UserController.set"}}},"servers":[{"url":"http://localhost:3000"}],"components":{"schemas":{"User":{"title":"User","type":"object","properties":{"id":{"type":"string"},"email":{"type":"string"},"role":{"type":"string","enum":["student","mentor","teacher"]},"firstName":{"type":"string"},"lastName":{"type":"string"},"grade":{"type":"number","minimum":1,"maximum":12}},"required":["email","role"],"additionalProperties":false},"UserWithRelations":{"title":"UserWithRelations","type":"object","description":"(tsType: UserWithRelations, schemaOptions: { includeRelations: true })","properties":{"id":{"type":"string"},"email":{"type":"string"},"role":{"type":"string","enum":["student","mentor","teacher"]},"firstName":{"type":"string"},"lastName":{"type":"string"},"grade":{"type":"number","minimum":1,"maximum":12}},"required":["email","role"],"additionalProperties":false,"x-typescript-type":"UserWithRelations"},"PingResponse":{"type":"object","title":"PingResponse","properties":{"greeting":{"type":"string"},"date":{"type":"string"},"url":{"type":"string"},"headers":{"type":"object","properties":{"Content-Type":{"type":"string"}},"additionalProperties":true}}},"User.Fields":{"title":"User.Fields","type":"object","properties":{"id":{"type":"boolean"},"email":{"type":"boolean"},"role":{"type":"boolean"},"firstName":{"type":"boolean"},"lastName":{"type":"boolean"},"grade":{"type":"boolean"}},"additionalProperties":false},"User.Filter":{"type":"object","title":"User.Filter","properties":{"offset":{"type":"integer","minimum":0},"limit":{"type":"integer","minimum":1,"example":100},"skip":{"type":"integer","minimum":0},"order":{"oneOf":[{"type":"string"},{"type":"array","items":{"type":"string"}}]},"where":{"title":"User.WhereFilter","type":"object","additionalProperties":true},"fields":{"$ref":"#/components/schemas/User.Fields"}},"additionalProperties":false,"x-typescript-type":"@loopback/repository#Filter<User>"}}}}
+{
+  "openapi": "3.0.0",
+  "info": {
+    "title": "lbhub-api",
+    "version": "0.0.1",
+    "description": "",
+    "contact": {
+      "name": "Justin Chung",
+      "email": "20733699+justin13888@users.noreply.github.com"
+    }
+  },
+  "paths": {
+    "/ping": {
+      "get": {
+        "x-controller-name": "PingController",
+        "x-operation-name": "ping",
+        "tags": [
+          "PingController"
+        ],
+        "responses": {
+          "200": {
+            "description": "Ping Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PingResponse"
+                }
+              }
+            }
+          }
+        },
+        "operationId": "PingController.ping"
+      }
+    },
+    "/user/search": {
+      "get": {
+        "x-controller-name": "UserController",
+        "x-operation-name": "search",
+        "tags": [
+          "UserController"
+        ],
+        "responses": {
+          "200": {
+            "description": "Array of User",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/UserWithRelations"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "filter",
+            "in": "query",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User.Filter"
+                }
+              }
+            }
+          }
+        ],
+        "operationId": "UserController.search"
+      }
+    },
+    "/user/{userId}": {
+      "get": {
+        "x-controller-name": "UserController",
+        "x-operation-name": "findById",
+        "tags": [
+          "UserController"
+        ],
+        "responses": {
+          "200": {
+            "description": "User",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "operationId": "UserController.findById"
+      },
+      "delete": {
+        "x-controller-name": "UserController",
+        "x-operation-name": "delete",
+        "tags": [
+          "UserController"
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully deleted",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "boolean"
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "operationId": "UserController.delete"
+      }
+    },
+    "/user": {
+      "post": {
+        "x-controller-name": "UserController",
+        "x-operation-name": "create",
+        "tags": [
+          "UserController"
+        ],
+        "responses": {
+          "200": {
+            "description": "User",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              }
+            }
+          }
+        },
+        "operationId": "UserController.create"
+      }
+    },
+    "/users/{userId}": {
+      "put": {
+        "x-controller-name": "UserController",
+        "x-operation-name": "updateById",
+        "tags": [
+          "UserController"
+        ],
+        "responses": {
+          "200": {
+            "description": "User",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "requestBody": {
+          "description": "update user",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              }
+            }
+          },
+          "x-parameter-index": 1
+        },
+        "operationId": "UserController.updateById"
+      }
+    }
+  },
+  "servers": [
+    {
+      "url": "http://localhost:3000"
+    }
+  ],
+  "components": {
+    "schemas": {
+      "User": {
+        "title": "User",
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "role": {
+            "type": "string",
+            "enum": [
+              "student",
+              "mentor",
+              "teacher"
+            ]
+          },
+          "firstName": {
+            "type": "string"
+          },
+          "lastName": {
+            "type": "string"
+          },
+          "grade": {
+            "type": "number",
+            "minimum": 1,
+            "maximum": 12
+          }
+        },
+        "required": [
+          "email",
+          "role"
+        ],
+        "additionalProperties": false
+      },
+      "UserWithRelations": {
+        "title": "UserWithRelations",
+        "type": "object",
+        "description": "(tsType: UserWithRelations, schemaOptions: { includeRelations: true })",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "role": {
+            "type": "string",
+            "enum": [
+              "student",
+              "mentor",
+              "teacher"
+            ]
+          },
+          "firstName": {
+            "type": "string"
+          },
+          "lastName": {
+            "type": "string"
+          },
+          "grade": {
+            "type": "number",
+            "minimum": 1,
+            "maximum": 12
+          }
+        },
+        "required": [
+          "email",
+          "role"
+        ],
+        "additionalProperties": false,
+        "x-typescript-type": "UserWithRelations"
+      },
+      "PingResponse": {
+        "type": "object",
+        "title": "PingResponse",
+        "properties": {
+          "greeting": {
+            "type": "string"
+          },
+          "date": {
+            "type": "string"
+          },
+          "url": {
+            "type": "string"
+          },
+          "headers": {
+            "type": "object",
+            "properties": {
+              "Content-Type": {
+                "type": "string"
+              }
+            },
+            "additionalProperties": true
+          }
+        }
+      },
+      "User.Fields": {
+        "title": "User.Fields",
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "boolean"
+          },
+          "email": {
+            "type": "boolean"
+          },
+          "role": {
+            "type": "boolean"
+          },
+          "firstName": {
+            "type": "boolean"
+          },
+          "lastName": {
+            "type": "boolean"
+          },
+          "grade": {
+            "type": "boolean"
+          }
+        },
+        "additionalProperties": false
+      },
+      "User.Filter": {
+        "type": "object",
+        "title": "User.Filter",
+        "properties": {
+          "offset": {
+            "type": "integer",
+            "minimum": 0
+          },
+          "limit": {
+            "type": "integer",
+            "minimum": 1,
+            "example": 100
+          },
+          "skip": {
+            "type": "integer",
+            "minimum": 0
+          },
+          "order": {
+            "oneOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "array",
+                "items": {
+                  "type": "string"
+                }
+              }
+            ]
+          },
+          "where": {
+            "title": "User.WhereFilter",
+            "type": "object",
+            "additionalProperties": true
+          },
+          "fields": {
+            "$ref": "#/components/schemas/User.Fields"
+          }
+        },
+        "additionalProperties": false,
+        "x-typescript-type": "@loopback/repository#Filter<User>"
+      }
+    }
+  }
+}
